--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
-apply plugin: "java"
-apply plugin: "maven-publish"
+plugins{
+    id 'java-gradle-plugin'
+    id 'maven-publish'
+}
+
+apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 version '1.0'
 
