--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
 plugins{
-    id 'java-gradle-plugin'
+    id 'java'
     id 'maven-publish'
 }
-
-apply plugin: 'java'
-apply plugin: 'maven-publish'
 
 version '1.0'
 
