Black hole ability stat display

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,2 +1,4 @@
+ability.blackhole = Black Hole
+
 setting.advanced-black-hole-rendering.name = Advanced Black Hole Rendering
 setting.advanced-black-hole-rendering.description = Advanced rendering may be laggy on low-end devices.\nDisable if you have framerate issues.
